--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,4 @@
 @import 'formes/bougie';
 @import 'formes/chat';
-@import 'formes/cygne'
-@import 'formes/serpent'
+@import 'formes/cygne';
+@import 'formes/serpent';
