--- a/scss/formes/_bougie.scss
+++ b/scss/formes/_bougie.scss
@@ -158,15 +158,25 @@ h1 {
   width: 70px;
   height: 70px;
 }
+.parallelogramme{
+  width: 55px;
+  height: 100
+  
+  px;
+  -webkit-transform: skew(20deg);
+  margin: 200px;
+}
 /* bougie */
-.bougie .triangle_un {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #d2696a;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-  margin-left: 300px;
+.bougie{
+  .triangle_un {
+    width: 0;
+    height: 0;
+    position: absolute;
+    transition: all 2s;
+    border-left: 50px solid #d2696a;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    background-color: rgba(0, 0, 0, 0);
+    margin-left: 300px;
+  }
 }
