--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,6 +1,127 @@
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 200;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLFj_Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfedw.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 800;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z1xlEA.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    font-display: swap;
+    src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z1xlEA.ttf) format('truetype');
+}
+
+* {
+    font-family: 'Poppins', sans-serif;
+    scroll-behavior: smooth;
+    padding: 0;
+    background-color: #333333;
+}
+
+body {
+    color: #fff;
+    margin: 20px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 80px;
+    margin-bottom: 0;
+    -webkit-text-stroke: 3px #777;
+}
+
+.first_page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 70vh;
+}
+
+.first_page button {
+    width: 100px;
+    height: 40px;
+    background-color: transparent;
+    outline: auto;
+    color: #fff;
+    border-radius: 30px;
+    margin: 20px;
+    margin-bottom: 30px;
+    border: 0;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.first_page button:hover {
+    background-color: #fff;
+    color: #333333;
+    outline-color: #fff;
+}
+
+.carre_tangram {
+    outline: auto;
+    height: 500px;
+    width: 500px;
+    background-color: #222222;
+    box-shadow: 12px 12px 12px black;
+    position: relative;
+}
+
 .bouton {
     display: flex;
-        flex-direction: column;
+    flex-direction: column;
+
     .btn_carre {
         .boutonhaut {
             display: flex;
