--- a/scss/formes/_bougie.scss
+++ b/scss/formes/_bougie.scss
@@ -15,7 +15,9 @@
   .parallelogramme{
     width: 55px;
     height: 100px;
-    transform: skew(20deg);
+    transform: skew(20
+    
+    deg);
     margin: 200px;
   }
 }
