--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,4 +2,5 @@
 @import 'formes/chat';
 @import 'formes/cygne';
 @import 'formes/serpent';
-@import './main'
+@import './main';
+@import 'formes/forms';
