--- a/scss/style.css
+++ b/scss/style.css
@@ -15,7 +15,7 @@
 .bougie .parallelogramme {
   width: 55px;
   height: 100px;
-  transform: skew(20deg);
+  transform: skew(20 deg);
   margin: 200px;
 }
 
@@ -653,4 +653,73 @@ h1 {
   display: flex;
   align-self: center;
   padding-left: 200px;
+}
+
+.triangle_un {
+  width: 0;
+  height: 0;
+  position: absolute;
+  transition: all 2s;
+  border-left: 50px solid #d2696a;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
+  background-color: rgba(0, 0, 0, 0);
+  margin-left: 300px;
+}
+
+.triangle_deux {
+  width: 0;
+  height: 0;
+  position: absolute;
+  transition: all 2s;
+  border-left: 50px solid #7e2b7c;
+  border-top: 50px solid transparent;
+  border-bottom: 50px solid transparent;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.triangle_trois {
+  width: 0;
+  height: 0;
+  position: absolute;
+  transition: all 2s;
+  border-left: 70px solid #189184;
+  border-top: 70px solid transparent;
+  border-bottom: 70px solid transparent;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.triangle_quatre {
+  width: 0;
+  height: 0;
+  position: absolute;
+  transition: all 2s;
+  border-left: 100px solid #fbc002;
+  border-top: 100px solid transparent;
+  border-bottom: 100px solid transparent;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.triangle_cinq {
+  width: 0;
+  height: 0;
+  position: absolute;
+  transition: all 2s;
+  border-left: 100px solid #b20000;
+  border-top: 100px solid transparent;
+  border-bottom: 100px solid transparent;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.carre {
+  background-color: #f48400;
+  width: 70px;
+  height: 70px;
+}
+
+.parallelogramme {
+  width: 55px;
+  height: 100px;
+  transform: skew(20deg);
+  margin: 200px;
 }/*# sourceMappingURL=style.css.map */
