--- a/scss/style.css
+++ b/scss/style.css
@@ -1,422 +1,69 @@
-@charset "UTF-8";
-/* bougie */
-@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-.bougie .triangle_un {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #d2696a;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-  margin-left: 300px;
-}
-.bougie .parallelogramme {
-  width: 55px;
-  height: 100px;
-  transform: skew(20 deg);
-  margin: 200px;
-}
-
-* {
-  font-family: "Poppins", sans-serif;
-  scroll-behavior: smooth;
-  padding: 0;
-  background-color: #333333;
-}
-
-body {
-  color: #fff;
-  margin: 20px;
-}
-
-h1 {
-  text-align: center;
-  font-size: 80px;
-  margin-bottom: 0;
-  -webkit-text-stroke: 3px #777;
-}
-
-.first_page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: 70vh;
-}
-
-.first_page button {
-  width: 100px;
-  height: 40px;
-  background-color: transparent;
-  outline: auto;
-  color: #fff;
-  border-radius: 30px;
-  margin: 20px;
-  margin-bottom: 30px;
-  border: 0;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.first_page button:hover {
-  background-color: #fff;
-  color: #333333;
-  outline-color: #fff;
-}
-
-.carre_tangram {
-  outline: auto;
-  height: 500px;
-  width: 500px;
-  background-color: #222222;
-  box-shadow: 12px 12px 12px black;
-  position: relative;
-}
-
-.triangle_un {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #d2696a;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_deux {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #7e2b7c;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_trois {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 70px solid #189184;
-  border-top: 70px solid transparent;
-  border-bottom: 70px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_quatre {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 100px solid #fbc002;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_cinq {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 100px solid #b20000;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.carre {
-  background-color: #f48400;
-  width: 70px;
-  height: 70px;
-}
-
-/* cygne */
-.cygne .triangle_un {
-  transform: translate(-6px, 155px) rotate(0deg);
-}
-
-.cygne .triangle_deux {
-  transform: translate(3px, 4px) rotate(45deg);
-}
-
-.cygne .triangle_trois {
-  transform: translate(-3px, 189px) rotate(180deg);
-}
-
-.cygne .triangle_cinq {
-  transform: translate(57px, 194px) rotate(135deg);
-}
-
-.cygne .ttriangle_quatre {
-  transform: translate(127px, 136px) rotate(90deg);
-}
-
-.cygne .carre {
-  transform: translate(12px, 116px) rotate(45deg);
-}
-
-.cygne .parallelogramme {
-  transform: translate(42px, 38px) rotate(45deg) skew(45deg);
-}
-
-.container {
-  width: 360px;
-  height: 450px;
-  float: left;
-}
-
-.carre_tangram {
-  padding: 20px 30px;
-  position: relative;
-}
-
-.tangram--basic {
-  transform: rotate(180deg);
-  margin-top: 200px;
-}
-
-.tangram--basic .triangle_un {
-  transform: translate(160px, -2px) rotate(180deg);
-}
-
-.tangram--basic .triangle_deux {
-  transform: translate(79px, 79px) rotate(270deg);
-}
-
-.tangram--basic .triangle_trois {
-  transform: translate(150px, 109px) rotate(45deg);
-}
-
-.tangram--basic .parallelogramme {
-  transform: translate(0, 0);
-}
-
-.tangram--basic .triangle_quatre {
-  transform: translate(54px, -52px) rotate(90deg);
-}
-
-.tangram--basic .carre {
-  transform: translate(122px, 66px) rotate(45deg);
-}
-
-.tangram--basic .triangle_cinq {
-  transform: translate(45px, 146px) rotate(-45deg) skew(45deg);
-}
-
-.cygne .triangle_un {
-  transform: translate(-6px, 155px) rotate(0deg);
-}
-
-.cygne .triangle_deux {
-  transform: translate(3px, 4px) rotate(45deg);
-}
-
-.cygne .triangle_trois {
-  transform: translate(-3px, 189px) rotate(180deg);
-}
-
-.cygne .triangle_cinq {
-  transform: translate(57px, 194px) rotate(135deg);
-}
-
-.cygne .triangle_quatre {
-  transform: translate(127px, 136px) rotate(90deg);
-}
-
-.cygne .carre {
-  transform: translate(12px, 116px) rotate(45deg);
-}
-
-.cygne .parallelogramme {
-  transform: translate(42px, 38px) rotate(45deg) skew(45deg);
-}
-
-.tangram--rabbit .triangle_un {
-  transform: translate(61px, 333px) rotate(45deg);
-}
-
-.tangram--rabbit .triangle--purple {
-  transform: translate(20px, 210px) rotate(180deg);
-}
-
-.tangram--rabbit .triangle--turquoise {
-  transform: translate(99px, 307px) rotate(135deg);
-}
-
-.tangram--rabbit .triangle--yellow {
-  transform: translate(60px, 120px) rotate(135deg);
-}
-
-.tangram--rabbit .triangle--red {
-  transform: translate(130px, 196px) rotate(-45deg);
-}
-
-.tangram--rabbit .square--orange {
-  transform: translate(0, 74px) rotate(0deg);
-}
-
-.tangram--rabbit .parallelogram--green {
-  transform: translate(76px, 0px) skew(-45deg);
-}
-
-.triangle {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-}
-
-.triangle_un {
-  border-left: 50px solid #d2696a;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-}
-
-.triangle_deux {
-  border-left: 50px solid #7e2b7c;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-}
-
-.triangle_trois {
-  border-left: 70px solid #189184;
-  border-top: 70px solid transparent;
-  border-bottom: 70px solid transparent;
-}
-
-.triangle_cinq {
-  border-left: 100px solid #fbc002;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-}
-
-.triangle_quatre {
-  border-left: 100px solid #b20000;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-}
-
-.carre {
-  position: absolute;
-  transition: all 2s;
-}
-
-.carre {
-  background-color: #f48400;
-  width: 70px;
-  height: 70px;
-}
-
-.parallelogramme {
-  position: absolute;
-  transition: all 2s;
-}
-
-.parallelogramme {
-  background-color: #81b442;
-  width: 64px;
-  height: 70px;
-}
-
-.buttons {
-  float: left;
-  width: 140px;
-}
-
-.buttons a {
-  color: #189184;
-  text-decoration: none;
-}
-
-.buttons a:before {
-  content: "»";
-  font-size: 26px;
-}
-
-.button--basic:after {
-  background: url(http://root.desi-gn.de/tangram/tangram-basic.svg) no-repeat #fff 3px 4px;
-  background-size: 24px;
-}
-
-.button--cat:after {
-  background: url(http://root.desi-gn.de/tangram/tangram-cat.svg) no-repeat #fff 3px 1px;
-  background-size: 28px;
-}
-
-.cygne:after {
-  background: url(http://root.desi-gn.de/tangram/tangram-swan.svg) no-repeat #fff 2px 1px;
-  background-size: 28px;
-}
-
-.button--rabbit:after {
-  background: url(http://root.desi-gn.de/tangram/tangram-rabbit.svg) no-repeat #fff 1px 2px;
-  background-size: 28px;
-}
-
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 200;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLFj_Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 300;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfedw.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 500;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 600;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 700;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 800;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z1xlEA.ttf) format("truetype");
 }
+
 @font-face {
-  font-family: "Poppins";
+  font-family: 'Poppins';
   font-style: normal;
   font-weight: 900;
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z1xlEA.ttf) format("truetype");
 }
+
 * {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   scroll-behavior: smooth;
   padding: 0;
   background-color: #333333;
@@ -435,9 +82,16 @@ h1 {
 }
 
 .first_page {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-height: 70vh;
 }
 
@@ -467,191 +121,27 @@ h1 {
   height: 500px;
   width: 500px;
   background-color: #222222;
-  box-shadow: 12px 12px 12px black;
-  position: relative;
-}
-
-.triangle_un {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #d2696a;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_deux {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 50px solid #7e2b7c;
-  border-top: 50px solid transparent;
-  border-bottom: 50px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_trois {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 70px solid #189184;
-  border-top: 70px solid transparent;
-  border-bottom: 70px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_quatre {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 100px solid #fbc002;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.triangle_cinq {
-  width: 0;
-  height: 0;
-  position: absolute;
-  transition: all 2s;
-  border-left: 100px solid #b20000;
-  border-top: 100px solid transparent;
-  border-bottom: 100px solid transparent;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.carre {
-  background-color: #f48400;
-  width: 70px;
-  height: 70px;
-}
-
-/*serpent*/
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 200;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLFj_Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 300;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDz8Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiEyp8kv8JHgFVrJJfedw.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 500;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLGT9Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 600;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLEj6Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 700;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLCz7Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 800;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLDD4Z1xlEA.ttf) format("truetype");
-}
-@font-face {
-  font-family: "Poppins";
-  font-style: normal;
-  font-weight: 900;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/poppins/v20/pxiByp8kv8JHgFVrLBT5Z1xlEA.ttf) format("truetype");
-}
-* {
-  font-family: "Poppins", sans-serif;
-  scroll-behavior: smooth;
-  padding: 0;
-  background-color: #333333;
-}
-
-body {
-  color: #fff;
-  margin: 20px;
-}
-
-h1 {
-  text-align: center;
-  font-size: 80px;
-  margin-bottom: 0;
-  -webkit-text-stroke: 3px #777;
-}
-
-.first_page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  max-height: 70vh;
-}
-
-.first_page button {
-  width: 100px;
-  height: 40px;
-  background-color: transparent;
-  outline: auto;
-  color: #fff;
-  border-radius: 30px;
-  margin: 20px;
-  margin-bottom: 30px;
-  border: 0;
-  text-align: center;
-  font-size: 20px;
-  font-weight: 600;
-}
-
-.first_page button:hover {
-  background-color: #fff;
-  color: #333333;
-  outline-color: #fff;
-}
-
-.carre_tangram {
-  outline: auto;
-  height: 500px;
-  width: 500px;
-  background-color: #222222;
-  box-shadow: 12px 12px 12px black;
+  -webkit-box-shadow: 12px 12px 12px black;
+          box-shadow: 12px 12px 12px black;
   position: relative;
 }
 
 .bouton {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
+
 .bouton .btn_carre .boutonhaut {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
   padding-left: 200px;
 }
 
@@ -659,6 +149,7 @@ h1 {
   width: 0;
   height: 0;
   position: absolute;
+  -webkit-transition: all 2s;
   transition: all 2s;
   border-left: 50px solid #d2696a;
   border-top: 50px solid transparent;
@@ -671,6 +162,7 @@ h1 {
   width: 0;
   height: 0;
   position: absolute;
+  -webkit-transition: all 2s;
   transition: all 2s;
   border-left: 50px solid #7e2b7c;
   border-top: 50px solid transparent;
@@ -682,6 +174,7 @@ h1 {
   width: 0;
   height: 0;
   position: absolute;
+  -webkit-transition: all 2s;
   transition: all 2s;
   border-left: 70px solid #189184;
   border-top: 70px solid transparent;
@@ -693,6 +186,7 @@ h1 {
   width: 0;
   height: 0;
   position: absolute;
+  -webkit-transition: all 2s;
   transition: all 2s;
   border-left: 100px solid #fbc002;
   border-top: 100px solid transparent;
@@ -704,6 +198,7 @@ h1 {
   width: 0;
   height: 0;
   position: absolute;
+  -webkit-transition: all 2s;
   transition: all 2s;
   border-left: 100px solid #b20000;
   border-top: 100px solid transparent;
@@ -720,6 +215,8 @@ h1 {
 .parallelogramme {
   width: 55px;
   height: 100px;
-  transform: skew(20deg);
+  -webkit-transform: skew(20deg);
+          transform: skew(20deg);
   margin: 200px;
-}/*# sourceMappingURL=style.css.map */
+}
+/*# sourceMappingURL=style.css.map */
